# vision-autoresearch

./: .gitignore  AGENTS.md  README.md  compare_vision.py  inspect_model.py  main.py  opencode.json  optimize_vision.py  prepare.py  program.md  pyproject.toml  train_classify.py  train_detect.py  train_detect_yolo.py  train_hf_vision.py  train_segment.py  train_ultralytics.py  train_vision.py  validate_modification.py
.opencode/agent/: autolab.md  (+6 more)
configs/: base_classify.yaml  base_classify_yolo.yaml  base_detect.yaml  base_detect_yolo.yaml  base_instance_segment.yaml  base_obb_yolo.yaml  base_pose_yolo.yaml  base_segment.yaml  base_segment_yolo.yaml  base_semantic_segment.yaml  base_track_yolo.yaml  base_universal_segment.yaml  example_compare.yaml  example_optimize.yaml  example_unified_hf_classify.yaml  example_unified_hf_detect.yaml  example_unified_research.yaml  example_unified_yolo_detect.yaml  example_unified_yoloe.yaml
engine/: __init__.py  augmentation.py  backend.py  collation.py  column_mapper.py  comparison.py  hf_backend.py  introspection.py  loss.py  metrics.py  optimization.py  pipeline.py  preprocessing.py  research.py  surgery_utils.py  training.py  ultralytics_backend.py  unified_dataset.py  unified_model.py
experiments/: modification.py  optimization.py
research/: do-not-repeat.md  notes.md  paper-ideas.md  results.tsv
scripts/: compile_run.py  dataset_inspector.py  estimate_cost.py  hf_job.py  local_results.py  opencode_worker.py  parse_metric.py  refresh_master.py  run_local.py  submit_patch.py  trackio_reporter.py  worker_common.py
(+55 files in other folders)
