[project]
name = "vision-autoresearch"
version = "0.1.0"
description = "Autonomous vision model fine-tuning research swarm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=4.45.0",
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
    "evaluate>=0.4.0",
    "albumentations>=1.4.0",
    "timm>=1.0.0",
    "torchmetrics>=1.4.0",
    "pycocotools>=2.0.8",
    "monai>=1.3.0",
    "trackio>=0.2.0",
    "huggingface-hub>=0.25.0",
    "safetensors>=0.4.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
